--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         android:layout_marginTop="144dp"
         android:layout_marginBottom="274dp"
         android:ems="10"
+        android:hint="Inserisci il nome"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/testButton"
         app:layout_constraintEnd_toEndOf="parent"
